Add cases and overview data to Redux store

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1205,6 +1205,7 @@
         padding: 16px 25px;
         border-radius: 8px;
         min-width: 375px;
+        height: fit-content;
         .overview-info,
         .title {
             margin-bottom: 12px;
