--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1239,6 +1239,7 @@
             display: flex;
             justify-content: space-between;
             margin-bottom: 4px;
+            width: 100%;
             div {
                 align-self: center;
             }
