IPE-279-Remove subtitle and description elements from the flag submit modal within DetailedCase component, also add margin-bottom of 5px to flag submit header element.

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -798,6 +798,7 @@
         &.flag-submit {
             display: flex;
             align-items: center;
+            margin-bottom: 5px;
         }
     }
     .subtitle {
