--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -1,8 +1,51 @@
-.user-management{
+.user-management {
     padding: 25px 40px;
-    .table-header{
+    .table-container {
+        > :last-child {
+            border-radius: 4px;
+            border: 1px solid #E0E0E0;
+        }
+    }
+    .table-header {
         position: sticky;
         top: 0;
         width: 100%;
+    }
+    .role-cell {
+        border-radius: 8px;
+        padding: 4px 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 85px;
+        background: #e0e0e0;
+        &.Owner {
+            background: rgba(0, 79, 110, 0.15);
+        }
+        &.Viewer {
+            background: rgba(242, 186, 14, 0.2);
+        }
+    }
+
+    ::-webkit-scrollbar {
+        width: 8px;
+        border-radius: 6px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background-color: rgba(0, 0, 0, 0.02);
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #c2c2c2;
+        border-radius: 6px;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: rgba(85, 85, 85, 0.8);
     }
 }
