IPE-329-Update position of publish and hide buttons in ClipTimeline comp.

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1044,7 +1044,7 @@
             margin-bottom: 0 !important;
             width: 91.5%;
             position: absolute;
-            bottom: 0;
+            bottom: 10px;
             display: flex;
             justify-content: space-between;
             button {
