ipe-319-REmove renderNotificationBell function declaration from OverView component, pass handleToggleClipNotification and isRecentClips props down to CarouselCase component from OverView component, declare and conditionally render bellNotificationIcon variable within CarouselCase and style bell notification icon.

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1218,6 +1218,14 @@
 
         .title.normal-text {
             margin-left: 8px;
+            
+            .bell-notification{
+                margin-left: 20px;
+                display: inline-block;
+                position: relative;
+                bottom: 1px;
+                cursor: pointer;
+            }
         }
         .thumbnail-case {
             min-height: 160px;
