--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1225,6 +1225,11 @@
                 position: relative;
                 bottom: 1px;
                 cursor: pointer;
+
+                img {
+                    width: 20px;
+                    height: 20px;
+                }
             }
         }
         .thumbnail-case {
