--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -36,22 +36,6 @@
         top: 0;
         width: 100%;
     }
-    .role-cell {
-        border-radius: 8px;
-        padding: 6px 8px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: 96px;
-        background: #e0e0e0;
-        &.Full {
-            background: rgba(0, 79, 110, 0.15);
-        }
-        &.View {
-            background: rgba(242, 186, 14, 0.2);
-        }
-    }
 
     ::-webkit-scrollbar {
         width: 8px;
@@ -74,6 +58,24 @@
         background: rgba(85, 85, 85, 0.8);
     }
 }
+
+.role-cell {
+    border-radius: 8px;
+    padding: 6px 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 96px;
+    background: #e0e0e0;
+    &.Full {
+        background: rgba(0, 79, 110, 0.15);
+    }
+    &.View {
+        background: rgba(242, 186, 14, 0.2);
+    }
+}
+
 .SST-Checkbox {
     &:not([class*="disabled"]) {
         svg {
@@ -205,9 +207,17 @@
     }
 
     .permissions-section {
+        .product-permission,
         .permissions-header {
             display: flex;
             justify-content: space-between;
+            span {
+                width: 20%;
+            }
+            .role-cell{
+                align-self: center;
+                max-height: 32px;
+            }
             margin: 9px 0;
         }
     }
