--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -196,13 +196,12 @@
         display: flex;
         justify-content: flex-end;
         > button {
-            &:first-child{
+            &:first-child {
                 margin-right: 20px;
             }
-            &:last-child{
+            &:last-child {
                 margin-left: 20px;
             }
-            
         }
     }
 
@@ -212,13 +211,22 @@
             display: flex;
             justify-content: space-between;
             span {
-                width: 20%;
-            }
-            .role-cell{
+                width: 34%;
+                padding: 8px 0;
                 align-self: center;
-                max-height: 32px;
+                &:not(:first-child){
+                    padding: 0 16px;
+                }
+            }
+            .role-cell {
+                
+                height: 32px;
+                min-width: 96px;
             }
             margin: 9px 0;
+        }
+        .product-permission{
+            margin: 31px 0;
         }
     }
 }
