--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -6,22 +6,8 @@
             border-radius: 4px;
             border: 1px solid #e0e0e0;
         }
-        .action-icon {
-            padding: 0 8px;
-            &:hover {
-                .edit path {
-                    fill: #004f6e !important;
-                }
-                .delete path {
-                    fill: #ec2027 !important;
-                }
-            }
-        }
         td {
             padding: 8px 16px;
-            &:last-child {
-                border-left: 1px solid #e0e0e0;
-            }
         }
         //Hide the spacer between search bar
         [class^="MTableToolbar-spacer"] {
@@ -35,6 +21,14 @@
         position: sticky;
         top: 0;
         width: 100%;
+    }
+    .table-footer {
+        > div {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+        }
+        font-style: italic;
     }
 
     ::-webkit-scrollbar {
@@ -76,6 +70,28 @@
     }
 }
 
+.action-icon {
+    padding: 0 8px;
+    &:hover {
+        .edit path {
+            fill: #004f6e !important;
+        }
+        .delete path {
+            fill: #ec2027 !important;
+        }
+    }
+    &.edit-profile-icon {
+        align-self: center;
+        margin-left: auto;
+        margin-right: 18px;
+    }
+}
+.is-edit-user{
+    .edit-profile-icon {
+        display: none;
+    }
+}
+
 .SST-Checkbox {
     &:not([class*="disabled"]) {
         svg {
@@ -103,7 +119,7 @@
     }
 }
 
-.user-added {
+.user-added-modal {
     width: 620px;
     height: 360px;
 
@@ -191,12 +207,12 @@
             margin-bottom: 24px;
         }
     }
-    &.single-edit{
-        .add-user-buttons{
+    &.user-added,
+    &.single-edit {
+        .add-user-buttons {
             display: none;
-        }    
+        }
     }
-    
 
     .permissions-section {
         .product-permission,
@@ -231,7 +247,7 @@
 }
 
 // TODO: move to own shared file
-.save-and-cancel{
+.save-and-cancel {
     display: flex;
     justify-content: flex-end;
     > button {
@@ -244,6 +260,23 @@
         }
         &:last-child {
             margin-left: 20px;
+        }
+    }
+    .loader {
+        border: 6px solid $light-grey;
+        border-top: 6px solid $light-blue;
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
         }
     }
 }
