--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -86,7 +86,7 @@
         margin-right: 18px;
     }
 }
-.is-edit-user{
+.is-edit-user {
     .edit-profile-icon {
         display: none;
     }
@@ -195,9 +195,14 @@
     .admin-panel-access {
         .admin-select {
             margin: 12px 0;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: row;
         }
         .role-display {
             margin: 9px 0;
+            display: flex;
+            justify-content: space-between;
         }
     }
     .divider {
