--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -13,6 +13,12 @@
         [class^="MTableToolbar-spacer"] {
             display: none;
         }
+
+        .MuiToolbar-root {
+            min-height: unset;
+            margin-bottom: 25px;
+        }
+        
         .add-user-button {
             margin: 0 86px;
         }
