IPE-351-Update styling and layout of publish/hide buttons and flag details container within flag clip modal.

--- a/app/containers/CaseDiscovery/style.scss
+++ b/app/containers/CaseDiscovery/style.scss
@@ -1023,7 +1023,7 @@
             padding-right: 0;
             padding-top: 0;
             position: relative;
-            max-height: 410px;
+            max-height: 350px;
             overflow: hidden;
             overflow-y: auto;
             & > div {
@@ -1042,9 +1042,10 @@
         .button {
             margin-top: 4px;
             margin-bottom: 0 !important;
-            width: 91.5%;
+            width: 235.6px;
             position: absolute;
-            bottom: 10px;
+            bottom: 64px;
+            right: 42px;
             display: flex;
             justify-content: space-between;
             button {
