--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -141,7 +141,7 @@ label {
 .full-height { height: 100%; }
 
 .pointer { cursor: pointer;}
-
+.underline { text-decoration: underline; }
 .flex {
   display: flex;
   &.vertical-center {
