Add basic reset user

--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -239,11 +239,12 @@
             }
         }
         .profile-icon {
-            width: 96px;
-            height: 96px;
+            margin: auto;
+            width: 76px;
+            height: 76px;
             border-radius: 48px;
             color: #fff;
-            line-height: 96px;
+            line-height: 76px;
             text-align: center;
             background: #004f6e;
             user-select: none;
