Add sstblue to title

--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -234,6 +234,9 @@
         display: flex;
         .profile-info {
             margin: 0 32px;
+            :first-child{
+                color: #004F6E;
+            }
             > div {
                 margin: 4px 0;
             }
