--- a/app/containers/AdminPanel/UserManagement/style.scss
+++ b/app/containers/AdminPanel/UserManagement/style.scss
@@ -22,6 +22,9 @@
         .add-user-button {
             margin: 0 86px;
         }
+        .MuiTableCell-root{
+            position: relative;
+        }
         .disabled-role {
             background: #e0e0e0;
             width: 100%;
