IPE-358-Remove DashBoard ListItem link from SSTNAV, wrap insights logo img within a NavLink with it's to prop set to '/dashboard', and set logo's cursor css property to pointer.

--- a/app/components/SSTNav/style.scss
+++ b/app/components/SSTNav/style.scss
@@ -7,7 +7,10 @@
     margin: auto;
 }
 
-.Package-Logo { width: 90%; }
+.Package-Logo { 
+    width: 90%; 
+    cursor: pointer;
+}
 
 .text-link {
     color: inherit;
