Clean up styling and add exit call

--- a/app/containers/SSTAdmin/SSTUsers/style.scss
+++ b/app/containers/SSTAdmin/SSTUsers/style.scss
@@ -1,5 +1,5 @@
 @import "styles/global-styles";
-.user-management {
+.sst-user-management {
     padding: 25px 40px;
     .table-container {
         > :last-child {
