--- a/app/containers/SSTAdmin/style.scss
+++ b/app/containers/SSTAdmin/style.scss
@@ -1,6 +1,6 @@
 @import '../../styles/global-styles';
 
-.admin-panel{
+.sst-admin-panel{
     height: calc(100%);
     overflow-y: auto;
     .header{
