Update SSC/EFF settings and request EMM

--- a/app/styles/global-styles.scss
+++ b/app/styles/global-styles.scss
@@ -336,3 +336,37 @@ tbody tr:hover:not(.MuiTableRow-footer) {
     }
   }
 }
+
+.save-and-cancel {
+  display: flex;
+  justify-content: flex-end;
+  > button {
+      &:first-child {
+          &:disabled {
+              opacity: 0.3;
+              color: #fff;
+          }
+          margin-right: 20px;
+      }
+      &:last-child {
+          margin-left: 20px;
+      }
+  }
+  .loader {
+      border: 6px solid $light-grey;
+      border-top: 6px solid $light-blue;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      animation: spin 2s linear infinite;
+  }
+
+  @keyframes spin {
+      0% {
+          transform: rotate(0deg);
+      }
+      100% {
+          transform: rotate(360deg);
+      }
+  }
+}
