--- a/app/containers/MyProfile/style.scss
+++ b/app/containers/MyProfile/style.scss
@@ -30,8 +30,10 @@
 }
 .my-profile{
     .buttons {
-        width: 235px;
+        width: 470px;
         margin-top: 16px;
+        display: flex;
+        justify-content: flex-end;
         .reset {
             color: #028cc8;
         }
